Finished skeleton, added in the beginning of routing. Application is now somewhat navigable.

--- a/src/app/combined-display/combined-display.component.html
+++ b/src/app/combined-display/combined-display.component.html
@@ -8,12 +8,12 @@
         <div class="pie">
             <h1>Positivity Analysis</h1>
 
-            <!--Pie-->
+            <app-pie-chart></app-pie-chart>
         </div>
         <div class = "words">
             <h1>Frequently Used Words</h1>
 
-            <!--Word-->
+            <app-word-cloud></app-word-cloud>  
         </div>
     </div>
 </div>
