--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="movie" class="movie">
-    <button>{{movie.name}}</button>
+    <button routerLink="/movie/{{movie.ref_num}}">{{movie.name}}</button>
 </div>
