--- a/src/app/sentiment-display/sentiment-display.component.html
+++ b/src/app/sentiment-display/sentiment-display.component.html
@@ -1,7 +1,7 @@
 <div class="sentiment-display">
     <h1>Out of all SENTIMENT reviews...</h1>
 
-    <!--Word-->
+    <app-word-cloud></app-word-cloud>
 
     <h2>Most Common Keywords Found</h2>
 </div>
