Startup on Style(CSS) and HTML layouts

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,16 @@
-<h1>ReviewSense</h1>
-<h2>Movie reviews analyzed right.</h2>
 
-<app-movie-list></app-movie-list>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<body>
+    <header>
+        <h1>ReviewSense</h1>
+    </header>
+    <h2>Movie reviews analyzed right.</h2>
+    <h4>(Search bar and login place holder)</h4>
+    <section>
+        <app-movie-list></app-movie-list>
+    </section>
+    <footer>
+        <p>Footer</p>
+    </footer>
+</body>
