--- a/src/app/movie-page/movie-page.component.css
+++ b/src/app/movie-page/movie-page.component.css
@@ -1,3 +1,14 @@
+* {
+    box-sizing: border-box;
+  }
+
+body {
+    background-image: linear-gradient(slategray, white);
+    margin: auto;
+    min-width: 650px;
+    max-width: 1440px;
+}
+
 .analysis-display {
     display: flex;
     flex-direction: row;
