--- a/src/app/movie-page/movie-page.component.html
+++ b/src/app/movie-page/movie-page.component.html
@@ -1,17 +1,18 @@
+<body>
+    <button type="button" (click)="goBack()">Home</button>
 
-<button type="button" (click)="goBack()">Home</button>
+    <div class="analysis-display">
+        <div class="movie-cover">
+            <span *ngIf="movie">{{movie.name}}</span>
+        </div>
 
-<div class="analysis-display">
-    <div class="movie-cover">
-        <span *ngIf="movie">{{movie.name}}</span>
+        <!--Conditional display of components based on routing ID.-->
+        <app-combined-display *ngIf="display === 0"></app-combined-display>
+        <app-sentiment-display *ngIf="display === 1"></app-sentiment-display>
+        <app-word-frequency-display *ngIf="display === 2"></app-word-frequency-display>
     </div>
 
-    <!--Conditional display of components based on routing ID.-->
-    <app-combined-display *ngIf="display === 0"></app-combined-display>
-    <app-sentiment-display *ngIf="display === 1"></app-sentiment-display>
-    <app-word-frequency-display *ngIf="display === 2"></app-word-frequency-display>
-</div>
-
-<div class="reviews-display">
-    <app-review-list></app-review-list>
-</div>
+        <div class="reviews-display">
+        <app-review-list></app-review-list>
+    </div>
+</body>
