Implemented routing. Fixed dimensions of pie chart and word cloud.

--- a/src/app/movie-page/movie-page.component.html
+++ b/src/app/movie-page/movie-page.component.html
@@ -1,5 +1,5 @@
 <body>
-    <button type="button" (click)="goBack()">Home</button>
+    <button type="button" (click)="goBack()"> &lt; Go Back</button>
 
     <div class="analysis-display">
         <div class="movie-cover">
