--- a/src/app/review-page/review-page.component.html
+++ b/src/app/review-page/review-page.component.html
@@ -1,5 +1,5 @@
 <body>
-    <button type="button" (click)="goBack()">Back</button>
+    <button type="button" (click)="goBack()">&lt; Go Back</button>
 
     <div *ngIf="review">
         <h1>Analysis of {{review.name}}'s review</h1>
