--- a/src/app/sentiment-display/sentiment-display.component.html
+++ b/src/app/sentiment-display/sentiment-display.component.html
@@ -1,5 +1,5 @@
 <div class="sentiment-display">
-    <h1>Out of all SENTIMENT reviews...</h1>
+    <h1>Out of all {{sentiment}} reviews...</h1>
 
     <app-word-cloud></app-word-cloud>
 
