Implemented HTTP. Now pulling from backend.

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -8,7 +8,7 @@
     <h2>Movie reviews analyzed right.</h2>
     <h4>(Search bar and login place holder)</h4>
     <section>
-        <app-movie-list></app-movie-list>
+        <app-movie-list [options]="options"></app-movie-list>
     </section>
     <footer>
         <p>Footer</p>
