--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,6 +1,8 @@
-<h1>List of Movies</h1>
-<div class="movie-list">
-    <div *ngFor="let movie of movies">
-        <app-movie [movie]="movie"></app-movie>
+<div *ngIf="options">
+    <h1>{{options.header}}</h1>
+    <div class="movie-list">
+        <div *ngFor="let movie of movies">
+           <app-movie *ngIf="movie.name.includes(options.query)" [movie]="movie"></app-movie>
+        </div>
     </div>
 </div>
