--- a/src/app/movie-page/movie-page.component.html
+++ b/src/app/movie-page/movie-page.component.html
@@ -13,6 +13,6 @@
     </div>
 
         <div class="reviews-display">
-        <app-review-list></app-review-list>
+        <app-review-list [options]="options"></app-review-list>
     </div>
 </body>
