--- a/src/app/review-list/review-list.component.html
+++ b/src/app/review-list/review-list.component.html
@@ -1,6 +1,8 @@
-<h1>List of Reviews</h1>
-<div class="review-list">
-    <div *ngFor="let review of reviews">
-        <app-review [review]="review"></app-review>
+<div *ngIf="options">
+    <h1>List of Reviews</h1>
+    <div class="review-list">
+        <div *ngFor="let review of reviews">
+            <app-review *ngIf="review.name.includes(options.query)" [review]="review"></app-review>
+        </div>
     </div>
 </div>
