--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -1,8 +1,12 @@
 <body>
    <div *ngIf="review" class="review" routerLink="/review/{{review.review_id}}">
-        <h2>{{review.title}}</h2> 
+        <h2>{{review.title}}</h2>
         <p>By {{review.name}} on {{review.date}}.</p>
-    
-        <p>{{review.review}}</p>        
+        <p>Sentiment: 
+            <span *ngIf="review.sentiment > 0" style="color: green;">{{review.sentiment}}</span>
+            <span *ngIf="review.sentiment < 0" style="color: red;">{{review.sentiment}}</span>
+        </p>
+        <p>{{review.review}}</p>
+
     </div>
 </body>
