--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -1,6 +1,7 @@
 <body>
    <div *ngIf="review" class="review" routerLink="/review/{{review.review_id}}">
-        <h2>{{review.title}}</h2>
+        <h2 *ngIf="review.title">{{review.title}}</h2>
+        <h2 *ngIf="!review.title">(No Title)</h2>
         <p>By {{review.name}} on {{review.date}}.</p>
         <p>Sentiment: 
             <span *ngIf="review.sentiment > 0" style="color: green;">{{review.sentiment}}</span>
