--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,16 +1,13 @@
+<!DOCTYPE html>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<html lang="en-US">
+
 <body>
-    <header>
-        <h1>ReviewSense</h1>
-    </header>
-    <h2>Movie reviews analyzed right.</h2>
-    <h4>(Search bar and login place holder)</h4>
-    <section>
+    <div>
         <app-movie-list [options]="options"></app-movie-list>
-    </section>
-    <footer>
-        <p>Footer</p>
-    </footer>
+    </div>
 </body>
+
+</html>
