--- a/src/app/search-results-page/search-results-page.component.html
+++ b/src/app/search-results-page/search-results-page.component.html
@@ -1,2 +1,5 @@
-<button type="button" (click)="goBack()"> &lt; Go Back</button>
-<app-movie-list [options]="options"></app-movie-list>
+<body>
+    <div>
+        <app-movie-list [options]="options"></app-movie-list>
+    </div>
+</body>
