--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,3 +1,8 @@
-<div class="menu-bar">
-    <input (keyup)="onSubmit($event)" [(ngModel)]="searchValue"/>
-</div>
+<body>
+    <div class="menu-bar">
+        <h1>ReviewSense</h1>
+        <h2>Search:</h2>
+        <p><input (keyup)="onSubmit($event)" [(ngModel)]="searchValue" /></p>
+        <h2>Movie reviews analyzed right.</h2>
+    </div>
+</body>
