--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -1,6 +1,6 @@
 button {
-    width: 8rem;
-    height: 11rem;
+    width: 10rem;
+    height: 15rem;
     border: 2px;
     margin: 2rem;
     font-family: 'Trebuchet MS';
@@ -9,8 +9,11 @@ button {
     cursor: pointer;
     transition: 0.3s;
     box-shadow: .3rem .3rem .5rem grey;
+    overflow-wrap: break-word;
+    text-align: center;
 }
 
 button:hover {
+    border-radius: 0px 30px 0px 0px;
     background-color: #c2c2c2;
 }
