--- a/src/app/movie-page/movie-page.component.css
+++ b/src/app/movie-page/movie-page.component.css
@@ -12,12 +12,13 @@ body {
     display: grid;
     grid-template-columns: 20rem auto auto;
     grid-row: auto auto;
+    padding: auto;
 }
 
 .reviews-display {
     border: 5px;
     border-style: solid;
-    margin-top: 1rem;
+    margin-top: auto;
     margin-left: 2rem;
     margin-right: 2rem;
     height: 500px;
@@ -44,6 +45,8 @@ body {
 h1 {
     border-radius: 10px 10px 0px 0px;
     padding-left: 1rem;
+    margin-top: 0rem;
+    margin-bottom: 0rem;
     margin-left: 2.2rem;
     margin-right: 2.2rem;
     background-color: #e63946;
