--- a/src/app/movie-page/movie-page.component.html
+++ b/src/app/movie-page/movie-page.component.html
@@ -1,3 +1,11 @@
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Movie | ReviewSense</title>
+
+</head>
+<html>
+
 <body>
     <div class="analysis-display">
         <div class="movie-cover">
@@ -14,3 +22,5 @@
         <app-review-list [options]="options"></app-review-list>
     </div>
 </body>
+
+</html>
