--- a/src/app/search-results-page/search-results-page.component.html
+++ b/src/app/search-results-page/search-results-page.component.html
@@ -1,5 +1,15 @@
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Search | ReviewSense</title>
+
+</head>
+<html>
+
 <body>
     <div>
         <app-movie-list [options]="options"></app-movie-list>
     </div>
 </body>
+
+</html>
