--- a/src/app/review-page/review-page.component.html
+++ b/src/app/review-page/review-page.component.html
@@ -1,3 +1,11 @@
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Review | ReviewSense</title>
+
+</head>
+<html>
+
 <body>
     <div *ngIf="review">
         <h1>Analysis of {{review.name}}'s review</h1>
@@ -9,3 +17,5 @@
         <p>{{review.review}}</p>
     </div>
 </body>
+
+</html>
