--- a/src/app/movie-list/movie-list.component.css
+++ b/src/app/movie-list/movie-list.component.css
@@ -5,7 +5,8 @@
 }
 
 h1 {
-    background-color: bisque;
+    background-color: whitesmoke;
+    color: #ff7d00;
     padding: 1rem;
     padding-left: 2rem;
     margin: auto;
