--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -4,7 +4,7 @@
         <h2 *ngIf="!review.title">(No Title)</h2>
         <div class="inner-info">
             <p class="user">By {{review.name}} on {{review.date}}.</p>
-            <p>Sentiment:
+            <p class="Sentiment">Sentiment:
                 <span *ngIf="review.sentiment > 0" style="color: green;">{{review.sentiment}}</span>
                 <span *ngIf="review.sentiment < 0" style="color: red;">{{review.sentiment}}</span>
             </p>
