--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -8,7 +8,13 @@ body {
 }
 
 div {
-    background-color: #a8dadc;
+    background-color: whitesmoke;
     margin: auto;
     padding: auto;
+}
+
+h2 {
+    color: #ff7d00;
+    margin: 0rem;
+    padding: 1rem;
 }
