--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -12,6 +12,12 @@
     <div>
         <app-movie-list [options]="options"></app-movie-list>
     </div>
+    <div>
+        <h2>Top Sentimental Movies</h2>
+    </div>
+    <div>
+        <h2>Lowest Sentimental Movies</h2>
+    </div>
 </body>
 
 </html>
