--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -15,5 +15,7 @@ button {
 
 button:hover {
     border-radius: 0px 30px 0px 0px;
+    border-style: solid;
+    border-color: #ff7d00;
     background-color: #c2c2c2;
 }
