--- a/src/app/movie-page/movie-page.component.html
+++ b/src/app/movie-page/movie-page.component.html
@@ -27,6 +27,9 @@
     <div class="reviews-display">
         <app-review-list [options]="options"></app-review-list>
     </div>
+    <div class="empty">
+
+    </div>
 </body>
 
 </html>
