--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -14,9 +14,15 @@
     </div>
     <div>
         <h2>Top Sentimental Movies</h2>
+        <div>
+            <app-movie-list [options]="options"></app-movie-list>
+        </div>
     </div>
     <div>
         <h2>Lowest Sentimental Movies</h2>
+        <div>
+            <app-movie-list [options]="options"></app-movie-list>
+        </div>
     </div>
 </body>
 
