--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -1,14 +1,25 @@
 <body>
     <div *ngIf="review" class="review" routerLink="/review/{{review.review_id}}">
-        <h2 *ngIf="review.title">{{review.title}}</h2>
-        <h2 *ngIf="!review.title">(No Title)</h2>
+        <div class="title">
+            <div class="triangle-right">
+
+            </div>
+            <div>
+                <h2 *ngIf="review.title">{{review.title}}</h2>
+                <h2 *ngIf="!review.title">(No Title)</h2>
+            </div>
+            <div class="triangle-left">
+
+            </div>
+        </div>
         <div class="inner-info">
             <p class="user">By {{review.name}} on {{review.date}}.</p>
             <p class="Sentiment">Sentiment:
                 <span *ngIf="review.sentiment > 0" style="color: green;">{{review.sentiment}}</span>
                 <span *ngIf="review.sentiment < 0" style="color: red;">{{review.sentiment}}</span>
             </p>
-            <p>{{review.review}}</p>
+            <hr>
+            <p class="review">- {{review.review}}</p>
         </div>
     </div>
 </body>
