--- a/src/app/review-page/review-page.component.css
+++ b/src/app/review-page/review-page.component.css
@@ -4,21 +4,39 @@
 
 body {
     background-color: whitesmoke;
-    margin: auto;
+    margin: 2rem 1rem 2rem 1rem;
     font-size: 20px;
 }
 
 div {
     margin: auto;
     padding: auto;
+    background-color: white;
 }
 
 h1 {
     margin: auto;
-    padding: auto;
+    background-color: #ff7d00;
+    border-radius: 10px 10px 0px 0px;
+    padding: 1rem 1rem 1rem 2rem;
 }
 
-p {
+h2 {
     margin: auto;
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 2rem;
+    color: #ff7d00
+}
+
+div.review-top-details {
+    font-style: italic;
+    background-color: white;
+    font-size: 20px;
+    margin: auto;
+    padding: 0rem 1rem 1rem 4rem;
+}
+
+div.review-detail {
+    background-color: whitesmoke;
+    margin: auto;
+    padding: .5rem 1rem 1rem 4rem;
 }
