--- a/src/app/search-results-page/search-results-page.component.html
+++ b/src/app/search-results-page/search-results-page.component.html
@@ -8,7 +8,7 @@
 
 <body>
     <div>
-        <app-movie-list [options]="options"></app-movie-list>
+        <app-movie-list [options]="searchOptions"></app-movie-list>
     </div>
 </body>
 
