Cleaning git issues

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -10,18 +10,18 @@
 
 <body>
     <div>
-        <app-movie-list [options]="options"></app-movie-list>
+        <app-movie-list [options]="homeOptions"></app-movie-list>
     </div>
     <div>
         <h2>Top Sentimental Movies</h2>
         <div>
-            <app-movie-list [options]="options"></app-movie-list>
+            <app-movie-list [options]="highOptions"></app-movie-list>
         </div>
     </div>
     <div>
         <h2>Lowest Sentimental Movies</h2>
         <div>
-            <app-movie-list [options]="options"></app-movie-list>
+            <app-movie-list [options]="lowOptions"></app-movie-list>
         </div>
     </div>
 </body>
