Adding CSS and Logo

--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="menu-bar">
         <div>
-            <h1 (click)="return()"> <img src="Logo_v1.png" alt="ReviewSense"> </h1>
+            <h1 (click)="return()"> <img src="assets/logo.png" alt="ReviewSense"> </h1>
         </div>
         <div>
             <h2>Search:</h2>
