--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -2,7 +2,8 @@ button {
     width: 10rem;
     height: 15rem;
     border: 2px;
-    margin: 2rem;
+    margin: 2rem 1rem 1rem 1rem;
+    padding: auto;
     font-family: 'Trebuchet MS';
     font-size: 1.5rem;
     font-weight: bolder;
@@ -20,10 +21,11 @@ button:hover {
     background-color: #c2c2c2;
 }
 
-img{
+img {
     width: 9rem;
     height: 14rem;
-
+    padding: auto;
+    margin: auto;
     cursor: pointer;
     transition: 0.3s;
     box-shadow: .3rem .3rem .5rem grey;
@@ -31,6 +33,32 @@ img{
     object-fit: cover;
 }
 
+.movie .MovieInfo {
+    visibility: hidden;
+    font-size: 1.5rem;
+    width: 30rem;
+    height: 15rem;
+    background-color: White;
+    color: Black;
+    text-align: center;
+    overflow-wrap: break-word;
+    padding: 10px 0;
+    border-radius: 12px;
+    position: absolute;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.movie:hover .MovieInfo {
+    visibility: visible;
+    opacity: 1;
+}
+
 img:hover {
     border-radius: 0px 30px 0px 0px;
+}
+
+hr {
+    color: #ff7d00;
 }
