--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,4 +1,8 @@
 <div *ngIf="movie" class="movie">
     <button *ngIf="movie.poster_url; else titleBlock" routerLink="/movie/{{movie.ref_num}}"><img src={{movie.poster_url}}></button>
     <ng-template #titleBlock><button routerLink="/movie/{{movie.ref_num}}">{{movie.name}}</button></ng-template>
+    <span class="MovieInfo">{{movie.name}}
+        <hr>
+        <h3>(Breif movie information here)</h3>
+    </span>
 </div>
