Poster Display, Word Cloud Functionality and beginning keyword parsing.

--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -3,6 +3,6 @@
     <ng-template #titleBlock><button routerLink="/movie/{{movie.ref_num}}">{{movie.name}}</button></ng-template>
     <span class="MovieInfo">{{movie.name}}
         <hr>
-        <h3>(Breif movie information here)</h3>
+        <h3>{{movie.overview}}</h3>
     </span>
 </div>
