--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -2,7 +2,7 @@
     <h1>{{options.header}}</h1>
     <div class="movie-list">
         <div *ngFor="let movie of movies">
-            <app-movie *ngIf="movie.name.includes(options.query)" [movie]="movie"></app-movie>
+            <app-movie *ngIf="movie" [movie]="movie"></app-movie>
         </div>
     </div>
 </div>
