--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -1,82 +1,45 @@
 button {
-    width: 10rem;
-    height: 15rem;
+    width: 9rem;
     border: 2px;
-    margin: 2rem 1rem 1rem 1rem;
-    padding: auto;
-    font-family: 'Trebuchet MS';
+    padding: 10px;
+    font-family: "Trebuchet MS";
     font-size: 1.5rem;
     font-weight: bolder;
     cursor: pointer;
     transition: 0.3s;
-    box-shadow: .3rem .3rem .5rem grey;
+    box-shadow: 0.3rem 0.3rem 0.5rem grey;
     overflow-wrap: break-word;
     text-align: center;
-    z-index: 1;
 }
 
-button:hover {
+button.active {
     border-radius: 0px 30px 0px 0px;
     border-style: solid;
     border-color: #ff7d00;
     background-color: #c2c2c2;
-    z-index: 0;
 }
 
 img {
-    width: 9rem;
-    height: 14rem;
-    padding: auto;
-    margin: auto;
-    cursor: pointer;
     transition: 0.3s;
-    box-shadow: .3rem .3rem .5rem grey;
+    box-shadow: 0.3rem 0.3rem 0.5rem grey;
     overflow-wrap: break-word;
     object-fit: cover;
     z-index: 1;
 }
 
-div.movie {
-    z-index: 1;
-}
-
-div.movie div.MovieInfo {
-    visibility: hidden;
-    font-size: 1.5rem;
-    width: 30rem;
-    height: 15rem;
-    background-color: White;
-    color: Black;
-    text-align: center;
-    overflow-wrap: break-word;
-    padding: 10px 0;
-    border-radius: 12px;
-    z-index: 999999;
-    opacity: 0;
-    transition: opacity 1s;
-}
-
-.movie:hover div.MovieInfo {
-    visibility: visible;
-    opacity: 1;
-    z-index: 999999;
-}
-
-img:hover {
+img.active {
     border-radius: 0px 30px 0px 0px;
-    z-index: 1;
 }
+
+
 
 hr {
     color: #ff7d00;
 }
 
-div.movie {
-    overflow: visable;
-    z-index: 0;
-}
-
-div.movie-wrapper {
-    display: flex;
-    flex-direction: row;
+.movie-wrapper {
+    cursor: pointer;
+    height: fit-content;
+    width: fit-content;
+    padding: 10px;
 }
