--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -1,5 +1,6 @@
 button {
-    width: 9rem;
+    width: 10rem;
+    height: 15rem;
     border: 2px;
     padding: 10px;
     font-family: "Trebuchet MS";
