--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -9,7 +9,7 @@
     <div class="carousel-wrap">
         <owl-carousel-o [options]="customOptions">
             <ng-container *ngFor="let movie of movies" style="width:200px">
-                <ng-template carouselSlide [id]="movie.name" >
+                <ng-template carouselSlide [id]="movie.name" [width]="200">
                     <app-movie *ngIf="movie.name.includes(options.query)" [movie]="movie" (onHoverChanged)="this.setActiveMovie($event)"></app-movie>
                 </ng-template>
             </ng-container>
